<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item android:id="@+id/action_settings"
        android:title="@string/actionBar_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_camera"
        android:title="@string/actionBar_camera"
        android:orderInCategory="150"
        app:showAsAction="never" />
    <item android:id="@+id/action_logout"
        android:title="@string/actionBar_logout"
        android:orderInCategory="200"
        app:showAsAction="never"/>

    <item android:id="@+id/action_newTask"
        android:title="@string/actionBar_newTask"
        android:icon="@drawable/ic_action_new_event"
        app:showAsAction="always"/>
</menu>
